# context-free

./: Cargo.toml  README.md
.github/workflows/: ci.yml  reviewdog.yml  scheduled.yml
examples/: slr.rs
src/: first.rs  lib.rs  utils.rs
src/lr0/: builder.rs  core.rs  lookup.rs  mod.rs
src/lr0/snapshots/: context_free__lr0__core__test__deterministic_transition_table.snap  context_free__lr0__core__test__it_works.snap
src/slr/: builder.rs  core.rs  helper.rs  mod.rs
src/slr/snapshots/: context_free__slr__builder__tests__it_works.snap  context_free__slr__core__tests__slr_to_json.snap
src/utils/: builder.rs  first.rs  first_v1.rs  firstv1.rs  follow.rs  follow_v1.rs  mod.rs  table.rs
src/utils/first/: builder.rs  mod.rs
src/utils/first/snapshots/: context_free__utils__first__test__case_1.snap  context_free__utils__first__test__it_works.snap
src/utils/follow/: builder.rs  mod.rs
src/utils/follow/snapshots/: context_free__utils__follow__tests__case_1.snap  context_free__utils__follow__tests__it_works.snap
