[package]
name = "context-free"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bnf = "0.5.0"
pretty_env_logger = "0.5.0"
indexmap = "2.8.0"
insta = "1.42.2"
itertools = "0.14.0"
log = "0.4.26"
once_cell = "1.21.1"
tabled = "0.18.0"
