[package]
name = "context-free"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bnf = "0.5.0"
pretty_env_logger = "0.5.0"
indexmap = "2.12.1"
insta = "1.44.1"
itertools = "0.14.0"
log = "0.4.28"
once_cell = "1.21.3"
tabled = "0.20.0"
